--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li> -->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects & Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,7 +39,8 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">Chege <span class="text-primary">Simon</span></h1>
                     <div class="subheading mb-5">software engineer in Kenya, Nairobi <a href="mailto:petekim211@gmail.com">petekim211@gmail.com</a></div>
-                    <p class="lead mb-5">Am a full-stack web developer.</p>
+                    <p class="lead mb-5">Am a full-stack developer.</p>
+                    <p class="lead mb-5">Constantly Expanding knowledge and skill to other fields of software devlopment.</p>
                     <p class="lead mb-5">I love building things. While hard engineering problems are often fun to tackle, i mostly get satisfaction from solving real world business problems through the art of software.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/simon-chege-ab313418a/" target="_blank"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/Chege-Simon" target="_blank"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/Chegesimon7" target="_blank"><i class="fab fa-twitter"></i></a><a class="social-icon" href="https://www.facebook.com/pete.kim.14203" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -46,6 +48,41 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="">Projects</h2>
+                    <div class="row ml-5">
+                        <div class="col-md-7 m-2 pr-5 pt-5">
+                            <h3 class="text-primary">Easy Issue</h3>
+                            Inspired by implementation of Agile methodology in software development,
+                             this project is a web application to help in organization and coordination in/of projects.
+                             It allows admins to create projects and project managers to create tickets for developers and give relevant priorities.
+                             It is build with LARAVEL for backend, VUEJS for frontend with compliments of BOOTSTRAP.
+                             <div class="row mt-5">
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="./assets/img/easy-garage.png" alt="Easy Garage png" class="image img-fluid img-thumbnail mt-5" style="width: 80%">
+                        </div>
+                    </div>
+                    <div class="row m-5">
+                        <div class="col-md-7 m-2 pr-5 pt-5">
+                            <h3 class="text-primary">Easy Garage</h3>
+                            This is a web application for registering vehicles to book for car maintainace and vehicle repair serivices.
+                            It is based on PHP for backend and BOOTSTRAP for styling.
+                            <div class="row mt-5">
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="./assets/img/easy-issue.png" alt="Easy Issue png" class="image img-fluid img-thumbnail mt-5" style="width: 80%;">
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Experience-->
             <!-- <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -83,8 +120,8 @@
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
                 </div>
-            </section> -->
-            <hr class="m-0" />
+            </section>-->
+            <hr class="m-0" /> 
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -126,11 +163,12 @@
                         <li class="list-inline-item"><i class="fa fa-flask"></i></li>
                         <li class="list-inline-item"><i class="fab fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git-square"></i></li>
+                        <li class="list-inline-item"></li><i class="fa fa-terminal" ></i></li>
                     </ul>
                     <div class="subheading mb-3">Skill set</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Responsive Design web application
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Building Websites &  Web Application with Responsive Design
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Expirience in SQL based database
@@ -139,39 +177,22 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>Deploy web applicaion and websites
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Agile Development & Scrum
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Building Desktop Applcations
                         </li>
                     </ul>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section class="resume-section" id="projects">
+            <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <div class="mb-5">
-                        <h3 class="mb-5">Projects</h3>
-                        <div class="row">
-                            <div class="col project1">
-                                <h2 class="text-center mt-5 font-italic project1-name">Easy Garage</h2>
-                                <div class="row">
-                                    <a class="btn btn-primary col mx-2 project1-link"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> VIEW ONLINE</a>
-                                    <a class="btn btn-primary col mx-2 project1-link" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github" aria-hidden="true"></i> VIEW SOURCE</a>
-                                </div>
-                            </div>
-                            <div class="col"></div>
-                            <div class="col"></div>
-                            <div class="col"></div>
-                        </div>
-                    </div>
-                    <div >
-                        <h3 class="mb-5">Interests</h3>
+                    <h3 class="mb-5">Interests</h3>
                         <p>Apart from web development, I work in python to develop a chat bot with deeplearning.</p>
                         <p>Its an exciting time for machine learning. I'm working through online classes.</p>
                         <p class="mb-0">Eventually I'll find my way to robotics. I like learnig new things.</p>
-                    </div>
                 </div>
             </section>
-       
+        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
