--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                              It is build with LARAVEL for backend, VUEJS for frontend with compliments of BOOTSTRAP.
                              <div class="row mt-5">
                                 <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
-                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a>
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" ></a>
+                                <!-- <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a> -->
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -73,8 +74,9 @@
                             This is a web application for registering vehicles to book for car maintainace and vehicle repair serivices.
                             It is based on PHP for backend and BOOTSTRAP for styling.
                             <div class="row mt-5">
-                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
-                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a>
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm"  href="http://easy-issue.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
+                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" ></a>
+                                <!-- <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a> -->
                             </div>
                         </div>
                         <div class="col-md-4">
