--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                              It allows admins to create projects and project managers to create tickets for developers and give relevant priorities.
                              It is build with LARAVEL for backend, VUEJS for frontend with compliments of BOOTSTRAP.
                              <div class="row mt-5">
-                                <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
+                                <a class="btn btn-primary col-sm-8 col-md-6 col-lg-4 text-sm"  href="http://easy-garage.herokuapp.com/" target="_blank"><i class="fa fa-globe fa-fw" aria-hidden="true"></i>View live</a>
                                 <a class="col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" ></a>
                                 <!-- <a class="btn btn-primary col-sm-6 col-md-4 col-lg-2 mx-2 text-sm" href="https://github.com/Chege-Simon/easyGarage" target="_blank"><i class="fab fa-github fa-fw" aria-hidden="true"></i>View source</a> -->
                             </div>
