Updating University Graduation

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                             <h3 class="mb-0">University of Eastern Africa, Baraton</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Software Engineering</div>
-                            <p>GPA: 3.4</p>
+                            <p>GPA: 3.18</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - </span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - July 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -179,7 +179,7 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>Deploy web applicaion and websites
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Building Desktop Applcations
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Building Enterprise Software like Customer Relationship Management and Inventory Management Systems
                         </li>
                     </ul>
                 </div>
