--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Simon Peter Kimani Chege - Portfolio</title>
+  <title>Simon Peter Kimani Chege</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/rough-notation/lib/rough-notation.iife.js"></script>
   <style>
